Bugfix: underline expand collapse links on Course Catalog

--- a/src/components/CourseCatalog/tablesorter.css
+++ b/src/components/CourseCatalog/tablesorter.css
@@ -97,6 +97,7 @@ span.secret {
     text-align: center;
     padding: 0 25px;
     font-style: normal;
+    text-decoration: underline;
 }
 
 .collapseExpandText {
